# dobot_ros2_6axis

dobot_bringup/: CMakeLists.txt  CMakeLists.txt.bk  README.md  package.xml
dobot_bringup/include/dobot_bringup/: commander.hpp  cr5_robot.hpp
dobot_bringup/launch/: display.launch.py
dobot_bringup/src/: cr5_robot.cpp  demo.cpp  main.cpp  tcp_socket.cpp
dobot_description/: CMakeLists.txt  package.xml
dobot_description/rviz/: urdf.rviz
dobot_msgs/: CMakeLists.txt  package.xml
dobot_msgs/action/: MovJ.action
dobot_msgs/srv/: Arc.srv  Arch.srv  Circle.srv  GetErrorID.srv  GetHoldRegs.srv  GetInRegs.srv  HandleTrajPoints.srv  InverseSolution.srv  MovJ.srv  MovJIO.srv  RelMovJTool.srv  RelMovLUser.srv  SetArmOrientation.srv  SetHoldRegs.srv  SetTerminal485.srv
nova5_moveit/: .setup_assistant  package.xml
nova5_moveit/config/: kinematics.yaml  moveit_controllers.yaml  nova5_robot.srdf  nova5_robot.urdf.xacro  ros2_controllers.yaml
